<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="14dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_txt"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toEndOf="@+id/iv_close"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorOnSurface"/>

    <RadioGroup
        android:id="@+id/lan_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/lan_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:checked="true"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/lan_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eng"
            android:gravity="center"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>