<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llNormalBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sub_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/action_chp"
            android:textSize="22sp" />


        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            style="@style/Widget.MaterialComponents.Chip.Action"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            style="@style/Widget.MaterialComponents.Chip.Action"
            app:chipIcon="@drawable/ic_account_circle_black_24dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/llOutLineBtns"
        app:layout_constraintTop_toBottomOf="@+id/llNormalBtns" />

    <LinearLayout
        android:id="@+id/llOutLineBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNormalBtns">

        <TextView
            android:id="@+id/sub_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_chp"
            android:textSize="22sp" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/llTextBtns"
        app:layout_constraintTop_toBottomOf="@+id/llOutLineBtns" />

    <LinearLayout
        android:id="@+id/llTextBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOutLineBtns">

        <TextView
            android:id="@+id/sub_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_chp"
            android:textSize="22sp" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@+id/llToggleBtn"
        app:layout_constraintTop_toBottomOf="@+id/llTextBtns" />

    <LinearLayout
        android:id="@+id/llToggleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTextBtns">

        <TextView
            android:id="@+id/sub_title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/entry_chp"
            android:textSize="22sp" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIcon="@drawable/ic_account_circle_black_24dp"
            android:text="@string/hello"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>