<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llNormalBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sub_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/normal_btn"
                android:textSize="22sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/normalBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/normalBtnIcn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_btn"
                app:icon="@drawable/ic_flower_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@+id/llOutLineBtns"
            app:layout_constraintTop_toBottomOf="@+id/llNormalBtns" />

        <LinearLayout
            android:id="@+id/llOutLineBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNormalBtns">

            <TextView
                android:id="@+id/sub_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outline_btn"
                android:textSize="22sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outlineBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outline_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/outlineBtnIcn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outline_btn"
                app:icon="@drawable/ic_flower_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@+id/llTextBtns"
            app:layout_constraintTop_toBottomOf="@+id/llOutLineBtns" />

        <LinearLayout
            android:id="@+id/llTextBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llOutLineBtns">

            <TextView
                android:id="@+id/sub_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn"
                android:textSize="22sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txtBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txtBtnIcn"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_btn"
                app:icon="@drawable/ic_flower_black_24dp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorOnBackground"
            app:layout_constraintBottom_toTopOf="@+id/llToggleBtn"
            app:layout_constraintTop_toBottomOf="@+id/llTextBtns" />

        <LinearLayout
            android:id="@+id/llToggleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llTextBtns">

            <TextView
                android:id="@+id/sub_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/toggle_btn"
                android:textSize="22sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/groupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/italic"
                    style="@style/ButtonToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_format_italic_black_24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bold"
                    style="@style/ButtonToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_format_bold_black_24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/underline"
                    style="@style/ButtonToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_format_underlined_black_24dp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_text">

                <TextView
                    android:id="@+id/test_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/test_txt"
                    android:textColor="@color/colorOnBackground"
                    android:textSize="40sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>